--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           </div>
           <div id="page_meta">
             <span class="page_meta_date">
-              &#91;&nbsp;04 August 2021&nbsp;&#93;
+              &#91;&nbsp;05 August 2021&nbsp;&#93;
             </span>
           </div>
         </div>
@@ -62,6 +62,6 @@
     </div>
   </body>
   <div class="footer">
-  <p>Copyright © 2021-2021&nbsp;|&nbsp;Powered by <a href="http://jekyllcn.com" target="_blank">Jekyll</a>. Theme by ExSimple.</p>
+  <p>Copyright © 2021-2021&nbsp;|&nbsp;Powered by <a href="http://jekyllcn.com" target="_blank">Jekyll</a>. Theme by <a href="https://github.com/loji44/ExSimple" target="_blank">ExSimple</a>.</p>
 </div>
 </html>
